basic user interface

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <meta charset="utf-8">
     <title>Ping-Pong</title>
   </head>
+    <div class="form-group">
+      <h1>Enter your number here</h1>
+      <label for="number"></label>
+      <input id="number" type="number" placeholder="numbers">
+      <br><br><button type="submit" class="btn btn-success">GO!</button>
+    </div>
   <body>
 
   </body>
