will now display the user input

--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
     <meta charset="utf-8">
     <title>Ping-Pong</title>
   </head>
-    <div class="form-group">
-      <h1>Enter your number here</h1>
-      <label for="number"></label>
-      <input id="number" type="number" placeholder="numbers">
-      <br><br><button type="submit" class="btn btn-success">GO!</button>
-    </div>
-  <body>
 
+  <body>
+    <div class="container">
+      <form id=pingpongform>
+        <div class="form-group">
+          <h1>Enter your number:</h1>
+          <label for="inputnumber"></label>
+          <input id="inputnumber" type="number" placeholder="number">
+          <br><br><button type="submit" class="btn btn-success">GO!</button>
+        </div>
+      </form>
+      <div id="result">
+      </div>
+    </div>
   </body>
+
 </html>
