--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         </div>
       </form>
       <div id="result">
+        <ul class="result">
+
+        </ul>
       </div>
     </div>
   </body>
