added example layout

--- a/index.html
+++ b/index.html
@@ -11,8 +11,27 @@
     <title>Ping-Pong</title>
   </head>
 
+  <div class="jumbotron">
+    <h1>Ping Pong</h1>
+  </div>
+
+
+
   <body>
+    <div class="sidebar">
+      <h1>About Ping Pong</h1>
+    </div>
+
     <div class="container">
+    <h1>Lets Play!</h1>
+    <h3>Rules</h3>
+    <p>ping pong will count from your number to 1 whit the following exceptions:</p>
+    <ol>
+      <li>Numbers divisible by 3 are replaced with "ping"</li>
+      <li>Numbers divisible by 5 are replaced with "pong"</li>
+      <li>Numbers divisible by 15 are replaced with "ping-pong"</li>
+    </ol>
+
       <form id=pingpongform>
         <div class="form-group">
           <h1>Enter your number:</h1>
@@ -23,7 +42,6 @@
       </form>
       <div id="result">
         <ul class="result">
-
         </ul>
       </div>
     </div>
