add information and link in sidebar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
   <body>
     <div class="sidebar">
       <h2>About Ping Pong</h2>
+      <h3>Created By:</h3>
+      <h4>Ian Wilcox</h4>
+      <h3>GitHub information</h3>
+      <h4>iantwilcox91</h4>
+      <h4>link: <a href="https://github.com/iantwilcox91">https://github.com/iantwilcox91</a></h4>
+
     </div>
 
     <div class="container">
