adjustments to page layout, working on separation, need gh-pages

--- a/index.html
+++ b/index.html
@@ -14,35 +14,39 @@
     <h1>Ping Pong</h1>
   </div>
   <body>
-    <div class="sidebar">
-      <h2>About Ping Pong</h2>
-      <h3>Created By:</h3>
-      <h4>Ian Wilcox</h4>
-      <h3>GitHub information</h3>
-      <h4>iantwilcox91</h4>
-      <h4>link: <a href="https://github.com/iantwilcox91">https://github.com/iantwilcox91</a></h4>
-    </div>
-    <div class="container">
-    <h1>Lets Play!</h1>
-    <h3>Rules</h3>
-    <p>ping pong will count from your number to 1 whit the following exceptions:</p>
-    <ol>
-      <li>Numbers divisible by 3 are replaced with "ping"</li>
-      <li>Numbers divisible by 5 are replaced with "pong"</li>
-      <li>Numbers divisible by 15 are replaced with "ping-pong"</li>
-    </ol>
-      <form id=pingpongform>
-        <div class="form-group">
-          <h1>Enter your number:</h1>
-          <label for="inputnumber"></label>
-          <input id="inputnumber" type="number" placeholder="number">
-          <br><br><button type="submit" class="btn btn-success">GO!</button>
-        </div>
-      </form>
-      <div id="result">
-        <ul class="result">
-        </ul>
+    <div class="row">
+
+      <div class="col-sm-4 sidebar">
+        <h2>About Ping Pong</h2>
+        <h3>Created By:</h3>
+        <h4>Ian Wilcox</h4>
+        <h3>GitHub information</h3>
+        <h4>iantwilcox91</h4>
+        <h4>link: <a href="https://github.com/iantwilcox91">https://github.com/iantwilcox91</a></h4>
       </div>
+      <div class="col-sm-8 container">
+        <h1>Lets Play!</h1>
+        <h3>Rules</h3>
+        <p>ping pong will count from your number to 1 with the following exceptions:</p>
+        <ol>
+          <li>Numbers divisible by 3 are replaced with "ping"</li>
+          <li>Numbers divisible by 5 are replaced with "pong"</li>
+          <li>Numbers divisible by 15 are replaced with "ping-pong"</li>
+        </ol>
+        <form id=pingpongform>
+          <div class="form-group">
+            <h1>Enter your number:</h1>
+            <label for="inputnumber"></label>
+            <input id="inputnumber" type="number" placeholder="number">
+            <br><br><button type="submit" class="btn btn-success">GO!</button>
+          </div>
+        </form>
+        <div id="result">
+          <ul class="result">
+          </ul>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
